--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             td, tr, img  { padding: 0px; margin: 0px; border: none; }
             table { border-collapse: collapse; }
         </style>
-        <table align="center" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding: 0; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #000000; border-collapse: collapse;">
+        <table align="center" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding: 0; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #000000; border-collapse: collapse; background-color:#ffffff;">
             <tr>
                 <td bgcolor="#005581" height="60px" align="center" style="text-align: center" colspan="5"><img src="img/logo.jpg" width="237px" height="60px" style="margin:0; auto"></td>
             </tr>
