--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
                 <td bgcolor="#005581" height="60px" align="center" style="text-align: center" colspan="5"><img src="img/logo.jpg" width="237px" height="60px" style="margin:0; auto"></td>
             </tr>
             <tr>
-                <td height="395px" colspan="5"><img src="img/export-bitmap-1.png" width="600px" height="395px" style="margin:0;"></td>
+                <td bgcolor="#ffffff" height="395px" colspan="5"><img src="img/export-bitmap-1.png" width="600px" height="395px" style="margin:0;"></td>
             </tr>
             <tr>
-                <td height="20px" colspan="5"></td>
+                <td bgcolor="#ffffff"height="20px" colspan="5"></td>
             </tr>
             <tr>
-                <td width="20px"></td>
-                <td width="20px" valign="top"><img src="img/export-bitmap-3@2x.png" width="20px" height="20px"></td>
-                <td width="10px"></td>
-                <td width="530px" valign="top">
+                <td bgcolor="#ffffff"width="20px"></td>
+                <td bgcolor="#ffffff"width="20px" valign="top"><img src="img/export-bitmap-3@2x.png" width="20px" height="20px"></td>
+                <td bgcolor="#ffffff" width="10px"></td>
+                <td bgcolor="#ffffff" width="530px" valign="top">
                     Mardi 19 XXX 2020, à partir de 9h
                 </td>
-                <td width="20px"></td>
+                <td bgcolor="#ffffff" width="20px"></td>
             </tr>
             <tr>
-                <td height="2px" colspan="5"></td>
+                <td bgcolor="#ffffff" height="2px" colspan="5"></td>
             </tr>
             <tr>
-                <td width="20px"></td>
-                <td width="20px" valign="top" align="center"><img src="img/export-bitmap-4@2x.png" width="15px" height="20px"></td>
-                <td width="10px"></td>
-                <td width="530px" valign="top">
+                <td bgcolor="#ffffff" width="20px"></td>
+                <td bgcolor="#ffffff" width="20px" valign="top" align="center"><img src="img/export-bitmap-4@2x.png" width="15px" height="20px"></td>
+                <td bgcolor="#ffffff" width="10px"></td>
+                <td bgcolor="#ffffff" width="530px" valign="top">
                     Bercy Lab, Hôtel des ministres
                 </td>
-                <td width="20px"></td>
+                <td bgcolor="#ffffff" width="20px"></td>
             </tr>
             <tr>
-                <td height="2px" colspan="5"></td>
+                <td bgcolor="#ffffff" height="2px" colspan="5"></td>
             </tr>
             <tr>
-                <td width="20px"></td>
-                <td width="20px" valign="top" align="center"><img src="img/export-bitmap-5@2x.png" width="18px" height="20px"></td>
-                <td width="10px"></td>
-                <td width="530px" valign="top">
+                <td bgcolor="#ffffff" width="20px"></td>
+                <td bgcolor="#ffffff" width="20px" valign="top" align="center"><img src="img/export-bitmap-5@2x.png" width="18px" height="20px"></td>
+                <td bgcolor="#ffffff" width="10px"></td>
+                <td bgcolor="#ffffff" width="530px" valign="top">
                     <b>9h :</b> Accueil café
                     <br/><b>9h30 - 12h :</b> La vision : partage des atouts et axes d’amélioration
                     MEDOC DB
@@ -56,12 +56,12 @@
                     sur la roadmap MEDOC DB
                     <br/><b>17h30 :</b> Fin de l’atelier
                 </td>
-                <td width="20px"></td>
+                <td bgcolor="#ffffff" width="20px"></td>
             </tr>
             <tr>
-                <td height="20px" colspan="5"></td>
+                <td bgcolor="#ffffff" height="20px" colspan="5"></td>
             </tr>
-            <tr><td height="236px" colspan="5" style="height: 236px; line-height:0;"><img src="img/semez-top.png" width="600px" height="236px" style="margin:0;padding:0;border: none;" border="0"></td></tr>
+            <tr><td bgcolor="#ffffff" height="236px" colspan="5" style="height: 236px; line-height:0;"><img src="img/semez-top.png" width="600px" height="236px" style="margin:0;padding:0;border: none;" border="0"></td></tr>
             <tr>
                 <td bgcolor="#8396C0" width="20px"></td>
                 <td bgcolor="#8396C0" width="560px" colspan="3" style="color: #ffffff;">
@@ -72,27 +72,27 @@ Nous avons construit cette journée pour qu’elle soit un temps fort basé sur 
                 <td bgcolor="#8396C0" width="20px"></td>
             </tr>
             <tr>
-                <td height="87px" colspan="5" style="height:87px; line-height:0;"><img src="img/semez-bottom.png" width="600px" height="87px" style="margin:0;padding:0;" border="0"></td>
+                <td bgcolor="#ffffff" height="87px" colspan="5" style="height:87px; line-height:0;"><img src="img/semez-bottom.png" width="600px" height="87px" style="margin:0;padding:0;" border="0"></td>
             </tr>
             <tr>
-                <td height="213px" colspan="5" style="height:213px; line-height:0;"><img src="img/export-bitmap.png" width="600px" height="213px" style="margin:0;padding:0;" border="0"></td>
+                <td bgcolor="#ffffff" height="213px" colspan="5" style="height:213px; line-height:0;"><img src="img/export-bitmap.png" width="600px" height="213px" style="margin:0;padding:0;" border="0"></td>
             </tr>
             <tr>
-                <td height="10px" colspan="5"></td>
+                <td bgcolor="#ffffff" height="10px" colspan="5"></td>
             </tr>
             <tr>
-                <td width="20px"></td>
-                <td width="560px" colspan="3">
+                <td bgcolor="#ffffff" width="20px"></td>
+                <td bgcolor="#ffffff" width="560px" colspan="3">
                     Nous comptons sur votre participation.
                     <br/><br/>
                     Merci de confirmer votre présence en formalisant une réponse à cet email avant le xxxxx 2020 (en l’absence de réponse, vous serez identifié comme ne pouvant pas participer).
                     <br/><br/>
                     L’atelier étant limité à 25 participants, nous reviendrons vers vous pour confirmer votre inscription
                 </td>
-                <td width="20px"></td>
+                <td bgcolor="#ffffff" width="20px"></td>
             </tr>
             <tr>
-                <td height="40px" colspan="5"></td>
+                <td bgcolor="#ffffff" height="40px" colspan="5"></td>
             </tr>
             <tr>
                 <td height="10px" bgcolor="#005581" colspan="5"></td>
