--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <td bgcolor="#ffffff" height="20px" colspan="5"></td>
             </tr>
             <tr><td bgcolor="#ffffff" height="236px" colspan="5" style="height: 236px; line-height:0;"><img src="img/semez-top.png" width="600px" height="236px" style="margin:0;padding:0;border: none;" border="0"></td></tr>
-            <tr>
+            <tr style="color: #ffffff; background-color:#8396C0">>
                 <td bgcolor="#8396C0" width="20px"></td>
                 <td bgcolor="#8396C0" width="560px" colspan="3" style="color: #ffffff; background-color:#8396C0">
                     <b>L’intention de l’atelier :</b> recueillir votre vision et vos besoins pour MEDOC liés à la stratégie, la réglementation, l’écosystème MEDOC et les usages pour les mettre en perspective dans la roadmap de migration MEDOC DB.
