--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <table align="center" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #333333; background-color:#ffffff;">
             <tr>
                 <td bgcolor="#005581" height="60px" align="center" style="text-align: center; border: 0;" colspan="5">
-                    <img src="img/logo.jpg" width="600px" height="60px" style="max-width: 1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic">
+                    <img src="https://op-ssg.github.io/img/logo.jpg" width="600px" height="60px" style="max-width: 1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic">
                 </td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" height="395px" style="border: 0;"><img src="img/participez.jpg" width="600px" height="395px" style="margin:0; border: 0;"></td>
+                <td bgcolor="#ffffff" height="395px" style="border: 0;"><img src="https://op-ssg.github.io/img/participez.jpg" width="600px" height="395px" style="margin:0; border: 0;"></td>
             </tr>
             <tr>
                 <td bgcolor="#ffffff" height="20px" style="border: 0;"></td>
@@ -24,7 +24,7 @@
                     <table align="left" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #333333; background-color:#ffffff;">              
                         <tr>
                             <td bgcolor="#ffffff"width="20px" style="border: 0;"></td>
-                            <td bgcolor="#ffffff"width="20px" valign="top" style="border: 0;"><img src="img/hour.jpg" width="20px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
+                            <td bgcolor="#ffffff"width="20px" valign="top" style="border: 0;"><img src="https://op-ssg.github.io/img/hour.jpg" width="20px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
                             <td bgcolor="#ffffff" width="10px" style="border: 0;"></td>
                             <td bgcolor="#ffffff" width="530px" valign="top" style="border: 0;">
                                 Mardi 19 XXX 2020, à partir de 9h
@@ -40,7 +40,7 @@
                         </tr>
                         <tr>
                             <td bgcolor="#ffffff" width="20px" style="border: 0;"></td>
-                            <td bgcolor="#ffffff" width="20px" valign="top" align="center" style="border: 0;"><img src="img/map.jpg" width="15px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
+                            <td bgcolor="#ffffff" width="20px" valign="top" align="center" style="border: 0;"><img src="https://op-ssg.github.io/img/map.jpg" width="15px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
                             <td bgcolor="#ffffff" width="10px" style="border: 0;"></td>
                             <td bgcolor="#ffffff" width="530px" valign="top" style="border: 0;">
                                 Bercy Lab, Hôtel des ministres
@@ -56,7 +56,7 @@
                         </tr>                       
                         <tr>
                             <td bgcolor="#ffffff" width="20px" style="border: 0;"></td>
-                            <td bgcolor="#ffffff" width="20px" valign="top" align="center"><img src="img/calendar.jpg" width="18px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
+                            <td bgcolor="#ffffff" width="20px" valign="top" align="center"><img src="https://op-ssg.github.io/img/calendar.jpg" width="18px" height="20px" style="border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
                             <td bgcolor="#ffffff" width="10px" style="border: 0;"></td>
                             <td bgcolor="#ffffff" width="530px" valign="top" style="border: 0;">
                                 <b>9h :</b> Accueil café
@@ -76,7 +76,7 @@
                 <td bgcolor="#ffffff" height="20px" style="border: 0;"></td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0; text-align: center; mso-line-height-rule: exactly; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%"><img src="img/semez-top.jpg" width="600px" height="256px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
+                <td bgcolor="#ffffff" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0; text-align: center; mso-line-height-rule: exactly; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%"><img src="https://op-ssg.github.io/img/semez-top.jpg" width="600px" height="256px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
             </tr>
             <tr style="color: #ffffff; background-color:#8396C0;">
                 <td style="border: 0;">
@@ -97,7 +97,7 @@
                 <td style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"><img src="img/semez-bottom.jpg" width="600px" height="78px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" height="213px" style="height:213px; border:0; line-height:0;"><img src="img/export-bitmap.png" width="600px" height="213px" style="margin:0;padding:0;" border="0"></td>
+                <td bgcolor="#ffffff" height="213px" style="height:213px; border:0; line-height:0;"><img src="https://op-ssg.github.io/img/export-bitmap.png" width="600px" height="213px" style="margin:0;padding:0;" border="0"></td>
             </tr>
             <tr>
                 <td bgcolor="#ffffff" height="10px" style="border: 0;"></td>
