--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <td style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"><img src="img/semez-bottom.jpg" width="600px" height="78px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" height="213px" style="height:213px; border:0; line-height:0;"><img src="https://op-ssg.github.io/img/export-bitmap.png" width="600px" height="213px" style="margin:0;padding:0;" border="0"></td>
+                <td bgcolor="#ffffff" height="213px" style="height:213px; border:0; line-height:0;"><img src="https://op-ssg.github.io/img/inscription.jpg" width="600px" height="213px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
             </tr>
             <tr>
                 <td bgcolor="#ffffff" height="10px" style="border: 0;"></td>
