--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport"/>
-    </head>
-    <body style="margin: 0; padding: 0; ">        
-        <div style="width:600px; border: 1px solid #005581; margin:0 auto; padding:0;">
-        <table align="center" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #333333; background-color:#ffffff; border: 1px solid #005581; ">
+<div style="width:600px; border: 1px solid #005581; margin:0 auto; padding:0;">
+        <table align="center" cellspacing="0" cellpadding="0" style="margin: 0 auto; padding: 0; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 600px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #333333; background-color:#ffffff; border: 1px solid #005581; ">
             <tr>
                 <td bgcolor="#005581" height="60px" align="center" style="text-align: center; border: 0;" colspan="5">
                     <img src="https://op-ssg.github.io/img/logo.jpg" width="600px" height="60px" style="max-width: 1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic">
@@ -94,7 +87,7 @@
                 </td>
             </tr>
             <tr>
-                <td style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"><img src="img/semez-bottom.jpg" width="600px" height="78px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
+                <td style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"><img src="https://op-ssg.github.io/img/semez-bottom.jpg" width="600px" height="78px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
             </tr>
             <tr>
                 <td bgcolor="#ffffff" height="213px" style="height:213px; border:0; line-height:0;"><img src="https://op-ssg.github.io/img/inscription.jpg" width="600px" height="213px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic"></td>
@@ -127,7 +120,4 @@
                 <td height="10px" bgcolor="#005581" style="border: 0;"></td>
             </tr>
         </table>
-        </div>
-
-    </body>
-</html>
+</div>
