--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <td bgcolor="#ffffff" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0; text-align: center; mso-line-height-rule: exactly; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%"><img src="https://op-ssg.github.io/img/semez-top.jpg" width="600px" height="256px" style="max-width: 600px; padding-bottom: 0; display: inline !important; vertical-align: bottom; border: 0; height: auto; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic" border="0"></td>
             </tr>
             <tr style="color: #ffffff; background-color:#8396C0;">
-                <td style="border: 0;">
-                
+                <td style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0; text-align: center; mso-line-height-rule: exactly; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
                     <table cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto; padding:0 20px; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 560px; font-family: arial, verdana, sans-serif; font-size: 16px; color: #ffffff; background-color:#8396C0;">  
                         <tr>
                             <td bgcolor="#8396C0" width="560px" align="left" style="border: 0; color: #ffffff; background-color:#8396C0">
